# snap

./: README.md
.github/workflows/: release.yml
desktop/: index.html  package.json  pnpm-lock.yaml
desktop/src/: App.css  App.tsx  Setup.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
scripts/: pre_build.py
